--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_IMAGES_PATH=/public/images
+VITE_APP_IMAGES_PATH=/public/images
+VITE_APP_IMAGE_URL=https://drive.google.com/uc?export=view&id=
+
