--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mercadopago/sdk-react": "^0.0.13",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.14.0",
     "spinners-react": "^1.0.7",
     "swiper": "^10.0.3",
